[gd_scene load_steps=6 format=2]

[ext_resource path="res://Cards/Card/Card.tscn" type="PackedScene" id=1]
[ext_resource path="res://Cards/Dealer.gd" type="Script" id=2]
[ext_resource path="res://Cards/Card/CardBack.png" type="Texture2D" id=3]
[ext_resource path="res://Technical/Center.gd" type="Script" id=4]
[ext_resource path="res://Scum/ScumGameMaster.gd" type="Script" id=5]

[node name="Scene" type="Node"]
script = ExtResource( 5 )
base_colour = Color( 0.145098, 0.145098, 0.164706, 1 )
current_turn_colour = Color( 0.254211, 0.254211, 0.332031, 1 )
eliminated_colour = Color( 0.298039, 0.258824, 0.258824, 1 )

[node name="Center" type="Node2D" parent="."]
visible = false
script = ExtResource( 4 )

[node name="PlayedCards" type="Node2D" parent="Center"]
visible = false
position = Vector2( 40, 0 )

[node name="ExtraCard3" parent="Center/PlayedCards" instance=ExtResource( 1 )]
position = Vector2( 0, 0 )
static_card = true

[node name="ExtraCard2" parent="Center/PlayedCards" instance=ExtResource( 1 )]
position = Vector2( 0, 0 )
static_card = true

[node name="ExtraCard" parent="Center/PlayedCards" instance=ExtResource( 1 )]
position = Vector2( 0, 0 )
static_card = true

[node name="BaseCard" parent="Center/PlayedCards" instance=ExtResource( 1 )]
position = Vector2( 0, 0 )
static_card = true

[node name="Deck" type="Node2D" parent="Center"]
position = Vector2( -40, 0 )

[node name="Card" type="Sprite2D" parent="Center/Deck"]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 3 )

[node name="Card2" type="Sprite2D" parent="Center/Deck"]
position = Vector2( 0, -2 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 3 )

[node name="Card3" type="Sprite2D" parent="Center/Deck"]
position = Vector2( 0, -4 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 3 )

[node name="Card4" type="Sprite2D" parent="Center/Deck"]
position = Vector2( 0, -6 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 3 )

[node name="Card5" type="Sprite2D" parent="Center/Deck"]
position = Vector2( 0, -8 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 3 )

[node name="PlayAreas" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="PlayerPath" type="Path2D" parent="PlayAreas"]
curve = null

[node name="Hands" type="Node2D" parent="PlayAreas"]

[node name="UI" type="Node" parent="."]

[node name="PlayerCard" type="Control" parent="UI"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -232.0
offset_top = -40.0
offset_right = -112.0
minimum_size = Vector2( 120, 40 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="UI/PlayerCard"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI/PlayerCard/Panel"]
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = -7.0
offset_right = 51.0
offset_bottom = 7.0
text = "Player 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PassRound" type="Button" parent="UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.0
offset_top = 56.0
offset_right = 70.0
text = "Pass Round"
